# final-project

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: heatwave-predict-model.ipynb
