[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.11.2",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "meteostat>=1.7.4",
    "mlflow>=3.1.1",
    "numpy>=2.2.6",
    "openaq>=0.4.0",
    "pandas>=2.3.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "sktime>=0.38.4",
    "tqdm>=4.67.1",
]
